# CalcPy-package

./: README.md  pyproject.toml  setup.py
.github/workflow/: ci.yml  deploy.yml
.github/workflows/: ci.yml  deploy.yml
calc/: calculator.py
scripts/release/: finish_release.sh  start_release.sh
tests/: test_calculator.py
