[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CalcPy"
version = "0.2.7"
description = "A simple calculator library"
readme = "README.md"
authors = [{name = "SamuelJanas", email = "sneakyinsect@gmail.com"}]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/SamuelJanas/CalcPy-package"

[tool.bumpver]
current_version = "0.2.7"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version: {old_version} → {new_version}"
commit = false
tag = false
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
] # Let bumpver know where to look for the version number
